--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="header"></div>
+    <div class="header">
+      <div class="logo">The Library</div>
+      <button>New Book</button>
+    </div>
     <div class="display"></div>
+    <dialog closedby="any">
+      ADD A BOOK
+      <form action="/" method="post">
+        <label for="title">Book Title:</label>
+        <input type="text" id="title" name="title" required />
+
+        <label for="author">Book Author:</label>
+        <input type="text" id="author" name="author" required />
+
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" name="pages" required />
+
+        <button type="submit">ADD</button>
+      </form>
+    </dialog>
     <script src="script.js"></script>
   </body>
 </html>
