--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <div class="logo">The Library</div>
-      <button>New Book</button>
+      <button class="new-book">New Book</button>
     </div>
     <div class="display"></div>
     <dialog closedby="any">
@@ -24,7 +24,10 @@
         <label for="pages">Pages:</label>
         <input type="number" id="pages" name="pages" required />
 
-        <button type="submit">ADD</button>
+        <label for="wasRead">Have you read it?</label>
+        <input type="checkbox" id="wasRead" />
+
+        <button class="submit" type="submit">ADD</button>
       </form>
     </dialog>
     <script src="script.js"></script>
