--- a/index.html
+++ b/index.html
@@ -13,16 +13,34 @@
     </div>
     <div class="display"></div>
     <dialog closedby="any">
-      ADD A BOOK
-      <form action="/" method="post">
+      <div class="heading">ADD A BOOK</div>
+      <form action="" method="post">
         <label for="title">Book Title:</label>
-        <input type="text" id="title" name="title" required />
+        <input
+          type="text"
+          id="title"
+          name="title"
+          placeholder="Title"
+          required
+        />
 
         <label for="author">Book Author:</label>
-        <input type="text" id="author" name="author" required />
+        <input
+          type="text"
+          id="author"
+          name="author"
+          placeholder="Author"
+          required
+        />
 
         <label for="pages">Pages:</label>
-        <input type="number" id="pages" name="pages" required />
+        <input
+          type="number"
+          id="pages"
+          name="pages"
+          placeholder="Number of pages"
+          required
+        />
 
         <label for="wasRead">Have you read it?</label>
         <input type="checkbox" id="wasRead" />
